homecluster/radicale/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicale
  namespace: radicale
  labels:
    app.kubernetes.io/component: deployment
    app.kubernetes.io/name: radicale
    app.kubernetes.io/instance: radicale
    app.kubernetes.io/version: "3.2.1.0"
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radicale
      app.kubernetes.io/instance: radicale
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radicale
        app.kubernetes.io/instance: radicale
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: radicale
          image: "tomsquest/docker-radicale:3.2.1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5232
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 5232
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5232
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 5232
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
             - name: data
               mountPath: /data
             - name: config
               mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: radicale-data
        - name: config
          persistentVolumeClaim:
            claimName: radicale-config
