homecluster/radicale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: radicale
  name: radicale-ingress
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: radicale-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - radicale.mgsds.com
    secretName: radicale.mgsds.com-tls
  rules:
  - host: radicale.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radicale
            port:
              number: 5232
